--- a/.github/workflows/deploy-to-company.yml
+++ b/.github/workflows/deploy-to-company.yml
@@ -26,6 +26,8 @@ jobs:
           git config --global user.email "tahiraziznu@gmail.com"
 
       - name: Push to client repository
+        env:
+          CLIENT_TOKEN: ${{ secrets.CLIENT_TOKEN }}
         run: |
-          git remote add client https://${{ secrets.CLIENT_TOKEN }}@github.com/tahiraziznu/client-r.git
+          git remote add client https://x-access-token:${CLIENT_TOKEN}@github.com/tahiraziznu/client-r.git
           git push client main --force
