--- a/.github/workflows/trigger-repo-b.yml
+++ b/.github/workflows/trigger-repo-b.yml
@@ -1,6 +1,4 @@
-# .github/workflows/trigger-repo-b.yml (in Repo A)
-
-name: Trigger Repo B Workflow
+name: Sync to Client Repo
 
 on:
   push:
@@ -12,16 +10,17 @@ on:
     types: [closed]
 
 jobs:
-  trigger:
+  sync-code:
     if: github.event.pull_request.merged == true || github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Trigger Repo B workflow_dispatch
+      - name: Checkout team-repo code
+        uses: actions/checkout@v3
+
+      - name: Push to client-repo
         run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.CLIENT_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/tahiraziznu/client-r/actions/workflows/manual-trigger.yml/dispatches \
-            -d '{"ref":"main"}'
+          git config user.name "Tahir Aziz"
+          git config user.email "tahiraziznu@gmail.com"
+          git remote add client https://x-access-token:${{ secrets.CLIENT_TOKEN }}@github.com/tahiraziznu/client-r.git
+          git push client HEAD:main --force
