--- a/.github/workflows/trigger-repo-b.yml
+++ b/.github/workflows/trigger-repo-b.yml
@@ -23,5 +23,5 @@ jobs:
           git config user.name "Tahir Aziz"
           git config user.email "tahiraziznu@gmail.com"
           git remote add client https://x-access-token:${{ secrets.CLIENTPAT }}@github.com/tahiraziznu/client-r.git
-          echo "Remote: https://x-access-token:${{ secrets.CLIENTPAT:0:4 }}****@github.com/tahiraziznu/client-r.git"
+          echo "Remote: https://x-access-token:${ secrets.CLIENTPAT:0:4 }****@github.com/tahiraziznu/client-r.git"
           git push client HEAD:main --force
