--- a/.github/workflows/trigger-repo-b.yml
+++ b/.github/workflows/trigger-repo-b.yml
@@ -48,6 +48,8 @@ jobs:
           
           rsync -av --progress ./ ./client-repo \
             --exclude .git \
+            --exclude '.github/***' \
+            --exclude 'node_modules/***' \
             --exclude .github \
             --exclude client-repo \
             --include 'src/***' \
