--- a/.github/workflows/trigger-repo-b.yml
+++ b/.github/workflows/trigger-repo-b.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout team-repo code
+      - name: Checkout Team Repo
         uses: actions/checkout@v3
         with:
           persist-credentials: false
